Make sidebar responsive, fix menu on tablet and lower.

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -16,7 +16,11 @@ a:hover {
 header, main, footer {
   padding-left: 300px;
 }
-
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+  padding-left: 0;
+  }
+}
 main {
 }
 nav.top-nav {
@@ -33,7 +37,6 @@ nav.top-nav a.page-title {
 .brand-logo img {
   max-height: 70px;
 }
-
 #user-info {
   padding-left: 30px;
 }
@@ -41,14 +44,18 @@ nav.top-nav a.page-title {
   width: 70px;
   border: 4px solid #777;
 }
-#user-info #user-name {
-  margin-left: 8px;
-}
 
 .menu-title {
   padding-left: 30px;
   color: #999;
   font-size: .8em;
+}
+#small-menu {
+  position: absolute;
+  top: 30px;
+}
+#small-menu-icon {
+  float: right;
 }
 
 /***
